# Chip-8

./: .gitignore  CMakeLists.txt  README-RUS.md  README.md
src/: chip8.c  chip8.h  main.c
